force-app/main/default/objects/User_Story__c/User_Story__c.object-meta.xml
<CustomObject>
    <description>This object is to capture user stories for business requirements</description>
    <label>User Story</label>
    <nameField>
        <displayFormat>STR-{0000}</displayFormat>
        <label>Story Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>