force-app/main/default/objects/User_Story__c/fields/As_a_Role__c.field-meta.xml
<CustomField>
    <fullName>As_a_Role__c</fullName>
    <label>AS A (Role)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>