force-app/main/default/objects/User_Story__c/fields/Functional_Description__c.field-meta.xml
<CustomField>
    <fullName>Functional_Description__c</fullName>
    <label>Functional Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>