force-app/main/default/objects/User_Story__c/fields/Related_Story__c.field-meta.xml
<CustomField>
    <fullName>Related_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Story</label>
    <referenceTo>User_Story__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>Stories</relationshipName>
    <type>Lookup</type>
</CustomField>