force-app/main/default/objects/User_Story__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requirement</label>
    <referenceTo>Requirement__c</referenceTo>
    <relationshipName>Stories</relationshipName>
    <type>Lookup</type>
</CustomField>