force-app/main/default/objects/User_Story__c/fields/Story_Description__c.field-meta.xml
<CustomField>
    <fullName>Story_Description__c</fullName>
    <label>Story Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>