force-app/main/default/objects/User_Story__c/listViews/RSS_SPRINT_1.listView-meta.xml
<ListView>
    <fullName>RSS_SPRINT_1</fullName>
    <columns>NAME</columns>
    <columns>Story_Description__c</columns>
    <columns>Status__c</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Iteration__c</field>
        <operation>equals</operation>
        <value>RSS Sprint 1</value>
    </filters>
    <label>RSS SPRINT 1</label>
    <sharedTo>
        <role>System_Administrators</role>
    </sharedTo>
</ListView>