force-app/main/default/objects/User_Story__c/listViews/RSS_Stories.listView-meta.xml
<ListView>
    <fullName>RSS_Stories</fullName>
    <columns>NAME</columns>
    <columns>Story_Description__c</columns>
    <columns>Project_Iteration__c</columns>
    <columns>Acceptance_Criteria__c</columns>
    <columns>As_a_Role__c</columns>
    <columns>Complexity__c</columns>
    <columns>Functional_Description__c</columns>
    <columns>Related_Story__c</columns>
    <columns>Requirement__c</columns>
    <columns>Status__c</columns>
    <columns>Technical_Specifications__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>P-0053-Registration Services Standardization &amp; LEX Conversion</value>
    </filters>
    <label>RSS Stories</label>
</ListView>